infrastructure/kubernetes/attendance-service/attendance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attendance-service
  namespace: hrms
  labels:
    app: attendance-service

spec:
  type: ClusterIP

  selector:
    app: attendance-service

  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
