infrastructure/kubernetes/attendance-service/attendance-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: attendance-service-netpol
  namespace: hrms

spec:
  podSelector:
    matchLabels:
      app: attendance-service

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: hrms
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8085

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: hrms
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672

    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
